Using lein and clojure.test

--- a/README
+++ b/README
@@ -1,3 +1,17 @@
-This is a clojure wrapper for webdriver (http://code.google.com/p/selenium/)
+# webdriver-clj
+
+This is Clojure wrapper for Selenium 2 (a.k.a webdriver)
 
 Miki Tebeka <miki@saucelabs.com>
+
+## Usage
+
+See test/webdriver_test.clj for minimal example.
+
+## Installation
+
+lein deps
+
+## License
+
+Apache 2
